# droughty

./: .flaskenv  .gitignore  .pre-commit-hooks.yaml  .readthedocs.yml  LICENSE  README.MD  README.md  Untitled.ipynb  droughty_project copy.yaml  droughty_project.yaml  droughty_project_i.yaml  droughty_project_ii.yaml  droughty_project_ii.yml  droughty_project_iii.yaml  droughty_qa_agent_dag.mmd  droughty_qa_assumptions.yaml  profile.yaml
droughty/: README.MD  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  dedupe_dataframe_learned_settings  dedupe_dataframe_training.json  pyproject.toml  requirements.txt
droughty/backup-repo.git/: config  packed-refs
droughty/droughty/: Untitled-Copy1.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled12.ipynb  Untitled13.ipynb  Untitled14.ipynb  Untitled15.ipynb  Untitled16.ipynb  Untitled17.ipynb  Untitled18.ipynb  Untitled19.ipynb  Untitled2.ipynb  Untitled20.ipynb  Untitled21.ipynb  Untitled22.ipynb  Untitled23.ipynb  Untitled24.ipynb  Untitled25.ipynb  Untitled27.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  Untitled9.ipynb  __init__.py  base_dict.py  candidate_cube_module.ipynb  config.py  config_cl.py  config_cli  config_cli.py  config_cli_i.py  config_cli_ii.py  config_cli_iii.py  config_cli_v.py  config_cli_vi.py  (+63 more)
droughty/droughty/.ipynb_checkpoints/: Untitled-Copy1-checkpoint.ipynb  Untitled-checkpoint.ipynb  Untitled10-checkpoint.ipynb  Untitled20-checkpoint.ipynb  Untitled25-checkpoint.ipynb  Untitled27-checkpoint.ipynb  Untitled3-checkpoint.ipynb  candidate_cube_module-checkpoint.ipynb  cube explore module-checkpoint.ipynb
droughty/droughty/cube_js_parser/: lexer.py  parser.py  tokens.py
droughty/droughty/cube_parser/: __main__.py  cube.py  keys.py  lexer.py  parser.py  simple.py  tokens.py  tree.py  visitors.py
droughty/droughty/droughty_core/: Untitled.ipynb  config.py  config_cli.py  droughty_data_prep.py  warehouse_target.py
droughty/droughty/droughty_cube/: cube_base_dict.py  cube_base_unnesting_dict.py  cube_cli.py  cube_explore_dict.py  cube_explore_module copy 2.py  cube_explore_module copy.py  cube_explore_module working replication  cube_explore_module.py  cube_explore_module_combined_models.py  cube_measure_module.py  cube_module.py  cube_unnesting_module.py
droughty/droughty/droughty_dbml/: dbml_base_dict.py  dbml_cli.py  dbml_module.py
droughty/droughty/droughty_dbt/: Untitled.ipynb  dbt_test_base_dict.py  dbt_test_cli.py  dbt_test_field_base.py  dbt_test_module.py  dbt_version_util.py
droughty/droughty/droughty_docs/: docs_cli.py  openai_descriptions.py
droughty/droughty/droughty_hydrometer/: hydrometer_cli.py  referential_integrity.py  referential_integrity_ii.py
droughty/droughty/droughty_lookml/: lookml_base_dict.py  lookml_cli.py  lookml_explore_dict.py  lookml_explore_module.py  lookml_measure_module.py  lookml_module.py  lookml_pop_module copy 4.py  lookml_pop_module copy.py  lookml_pop_module.py  lookml_pop_module_snowflake.py
droughty/droughty/droughty_ontology/: ontology_base.py  ontology_cli.py  ontology_retrieval.py
droughty/droughty/tml_parser/: parser.py  (+2 more)
droughty/tests/: test_droughty.py
(+87 files in other folders)
