[tool.poetry]
name = "droughty"
version = "0.7.4"
description = "droughty is an analytics engineering toolkit, helping keep your workflow dry."
authors = ["Lewis <lewischarlesbaker@gmail.com>"]
license = "MIT"
repository = 'https://github.com/lewischarlesbaker/droughty'
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
lkml = "1.1.0"
SQLAlchemy = "1.4.22"
pandas = "1.3.5"
click = "8.0.1"
snowflake = "0.0.3"
pandas-gbq = "0.15.0"
GitPython = "3.1.26"
protobuf = "3.19.4"
PyYAML = "6.0"
"ruamel.base" = "1.0.0"
snowflake-connector-python = "^2.7.2"
snowflake-sqlalchemy = "1.3.3"
"ruamel.yaml" = "^0.17.20"
pycryptodomex = "3.10.1"
Sphinx = "^4.4.0"
typer = "0.4.0"
jinjasql = "0.1.8"
six = "1.16.0"
tqdm = "4.62.3"
Markdown = "^3.3.6"
Jinja2 = "3.0.1"
glom = "^22.1.0"
pyarrow = "6.0.0"

[tool.poetry.scripts]
droughty = "droughty.main:start"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
