
[tool.poetry]
name = "droughty"
version = "0.10.2"
description = "droughty is an analytics engineering toolkit, helping keep your workflow dry."
authors = ["Lewis <lewischarlesbaker@gmail.com>"]
license = "MIT"
repository = 'https://github.com/lewischarlesbaker/droughty'
readme = 'README.md'

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
GitPython = "3.1.31"
glom = "23.1.1"
lkml = "1.3.1"
Markdown = "3.4.1"
numpy = "1.24.2"
openai = "0.26.5"
pandas = "1.5.3"
pandas_dedupe = "1.5.0"
pandas_gbq = "0.19.1"
protobuf = ">=3.13.0,<4"
PyYAML = "6.0"
six = "1.16.0"
ruamel-yaml = "0.17.21"
snowflake-connector-python = "^3.0.0"
sqlalchemy = ">=1.4.0,<2.0.0"
snowflake-sqlalchemy = "^1.4.6"
pyarrow = "10.0.1"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
droughty = "droughty.main:start"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"