
[tool.poetry]
name = "droughty"
version = "0.19.0"
description = "droughty is an analytics engineering toolkit, helping keep your workflow dry."
authors = ["lydia <lydia@rittmananalytics.com>"]
license = "MIT"
repository = 'https://github.com/rittmananalytics/droughty'
readme = 'README.md'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
GitPython = "3.1.44"
glom = "23.1.1"
lkml = "1.3.1"
Markdown = "3.4.1"
numpy = "1.26.0"
openai = "1.59.8"
pandas = "^2.1.0" 
pandas_dedupe = { version = "1.5.0", optional = true }
pandas_gbq = "0.19.1"
protobuf = "5.29.3"
PyYAML = "6.0.2"
six = "1.16.0"
ruamel-yaml = "0.17.21"
snowflake-connector-python = "3.12.4"
sqlalchemy = "1.4.54"
snowflake-sqlalchemy = "^1.4.6"
pyarrow = "14.0.1"
jinja2 = "3.1.5"
langchain-core = "0.3.30"
langchain-openai = "0.3.0"
langgraph = "0.2.64"
langsmith = "0.2.11"
ordereddict = "1.1"
pydantic = "2.10.5"
ruamel-base = "1.0.0"
typing-extensions = "4.12.2"

[tool.poetry.extras]
dedupe = ["pandas_dedupe"]

[tool.poetry.scripts]
droughty = "droughty.main:start"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"